--- a/subtlechat-mini-master/pom.xml
+++ b/subtlechat-mini-master/pom.xml
@@ -79,6 +79,11 @@
             <version>0.1.1</version>
         </dependency>
         <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
