--- a/subtlechat-mini-master/pom.xml
+++ b/subtlechat-mini-master/pom.xml
@@ -93,6 +93,10 @@
             <artifactId>aliyun-sdk-oss</artifactId>
             <version>3.10.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
 
     </dependencies>
