--- a/subtlechat-mini-master/src/main/resources/application-dev.properties
+++ b/subtlechat-mini-master/src/main/resources/application-dev.properties
@@ -44,4 +44,24 @@ aliyun.oss.endpoint=oss-cn-beijing.aliyuncs.com
 aliyun.oss.keyid=你的keyid
 aliyun.oss.keysecret=你的kysecret
 aliyun.oss.bucketname=subtle-chat
-
+#????????????????????
+spring.rabbitmq.publisher-returns=true
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.listener.simple.acknowledge-mode: manual
+spring.rabbitmq.listener.simple.prefetch=100
+spring.rabbitmq.addresses=127.0.0.1:5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+#SMTP?????
+spring.mail.host=smtp.qq.com
+#SMTP?????
+spring.main.port=587
+#???????????
+spring.mail.username=798254949@qq.com
+#???????
+spring.mail.password=rhidsvxgizhdbccd
+#????
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+#debug??????????
+spring.mail.properties.mail.debug=true
