--- a/subtlechat-mini-master/src/main/resources/application-dev.properties
+++ b/subtlechat-mini-master/src/main/resources/application-dev.properties
@@ -40,10 +40,10 @@ spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFact
 spring.mail.properties.mail.debug=true
 
 #oss配置
-aliyun.oss.endpoint=oss-cn-beijing.aliyuncs.com
-aliyun.oss.keyid=你的keyid
-aliyun.oss.keysecret=你的kysecret
-aliyun.oss.bucketname=subtle-chat
+aliyun.oss.endpoint=oss-eu-west-1.aliyuncs.com
+aliyun.oss.keyid=LTAI5t61NW6dXcAYGQa8iPe3
+aliyun.oss.keysecret=Pc6i10ZLnJwXKvSqwQKnLquvtUywjV
+aliyun.oss.bucketname=subtle-chat01
 #????????????????????
 spring.rabbitmq.publisher-returns=true
 spring.rabbitmq.publisher-confirm-type=correlated
