--- a/subtlechat-mini-master/src/main/resources/application-dev.properties
+++ b/subtlechat-mini-master/src/main/resources/application-dev.properties
@@ -41,8 +41,8 @@ spring.mail.properties.mail.debug=true
 
 #oss配置
 aliyun.oss.endpoint=oss-eu-west-1.aliyuncs.com
-aliyun.oss.keyid=LTAI5t61NW6dXcAYGQa8iPe3
-aliyun.oss.keysecret=Pc6i10ZLnJwXKvSqwQKnLquvtUywjV
+aliyun.oss.keyid=自己的keyid
+aliyun.oss.keysecret=自己的secret
 aliyun.oss.bucketname=subtle-chat01
 #????????????????????
 spring.rabbitmq.publisher-returns=true
