czcy 后端加密解密

--- a/subtlechat-mini-master/pom.xml
+++ b/subtlechat-mini-master/pom.xml
@@ -111,7 +111,11 @@
             <version>5.2.9.RELEASE</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-crypto</artifactId>
+            <version>5.7.15</version>
+        </dependency>
 
     </dependencies>
 
