--- a/subtlechat-mini-master/src/main/resources/application-dev.properties
+++ b/subtlechat-mini-master/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/chatroom?useSSL=false
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.username= root
 #开发环境密码
-spring.datasource.password=123456
+spring.datasource.password=1234
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -51,9 +51,9 @@ spring.rabbitmq.publisher-returns=true
 spring.rabbitmq.publisher-confirm-type=correlated
 spring.rabbitmq.listener.simple.acknowledge-mode: manual
 spring.rabbitmq.listener.simple.prefetch=100
-spring.rabbitmq.addresses=127.0.0.1:5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.addresses=20.68.174.190:5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=yourpassword
 #SMTP?????
 spring.mail.host=smtp.qq.com
 #SMTP?????
