--- a/subtlechat-mini-master/src/main/resources/application-dev.properties
+++ b/subtlechat-mini-master/src/main/resources/application-dev.properties
@@ -20,19 +20,19 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 #端口号配置
 server.port=8082
 #FastDFS文件服务器的主机名
-fastdfs.nginx.host=http://39.108.169.57/
+fastdfs.nginx.host=http://20.68.174.190/
 #SMTP服务器地址
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.163.com
 #SMTP服务器端口
 spring.mail.port=587
 #发送者的用户名（邮箱）
-spring.mail.username=hanxrun@gmail.com
+spring.mail.username=tow8se@163.com
 #发送方的授权码
-spring.mail.password=giasqnpmwzspgeaa
+spring.mail.password=WDTSLBYOZGERGUAV
 #编码格式
 spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
@@ -52,16 +52,3 @@ spring.rabbitmq.listener.simple.prefetch=100
 spring.rabbitmq.addresses=127.0.0.1:5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-#SMTP?????
-spring.mail.host=smtp.qq.com
-#SMTP?????
-spring.main.port=587
-#???????????
-spring.mail.username=798254949@qq.com
-#???????
-spring.mail.password=rhidsvxgizhdbccd
-#????
-spring.mail.default-encoding=UTF-8
-spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-#debug??????????
-spring.mail.properties.mail.debug=true
